fixing stuck issue on page load

--- a/assets/css/babyshung.css
+++ b/assets/css/babyshung.css
@@ -172,35 +172,66 @@ nav a.brand-logo, .zh-blogTitle {
   transform: rotate(360deg);
 }
 
-/* ZH Icon Grow Rotate 
-.zh-icon-grow-rotate {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px transparent;
-  position: relative;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+/* customized Animate.css */
+
+.animated {
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
-.zh-icon-grow-rotate:before {
-  position: absolute;
-  top: 0;
-  left:0;
-  right:0;
-  margin-left:auto;
-  margin-right:auto;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
+
+@-webkit-keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 10%, 0);
+    transform: translate3d(0, 10%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
 }
-.zh-icon-grow-rotate:hover:before, .zh-icon-grow-rotate:focus:before, .zh-icon-grow-rotate:active:before {
-  -webkit-transform: scale(1.5) rotate(12deg);
-  transform: scale(1.5) rotate(12deg);
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 10%, 0);
+    transform: translate3d(0, 10%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
 }
-*/
+
+.zh-dashboard-list {
+
+}
+
+#dashboard-col-1 {
+    -webkit-animation-delay:1.0s;
+    animation-delay:1.0s
+}
+
+#dashboard-col-2 {
+    -webkit-animation-delay:1.6s;
+    animation-delay:1.6s
+}
+
+
+#dashboard-col-3 {
+    -webkit-animation-delay:1.3s;
+    animation-delay:1.3s
+}
+
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+  animation-timing-function: ease-out;
+}
